updated: the small image on images/small.jpg path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             class="generic-input"
                             type="text"
                             placeholder="Username"
-                            autocomplete="Username">
+                            autocomplete="username">
                     </label>
                     <label>
                         <input
